--- a/src/assets/CSS/admin_database.css
+++ b/src/assets/CSS/admin_database.css
@@ -127,6 +127,13 @@
     -fx-background-color: transparent;
 }
 
+.toolbar-menu .arrow-button .arrow {
+    -fx-shape: "M 0 0 L 6 0 L 3 6 z";
+    -fx-fill: -white;
+    -fx-background-color: -white;
+    -fx-border-color: -white;
+}
+
 .toolbar-menu:hover  {
     -fx-background-color: -secondary-color;
 }
@@ -217,6 +224,11 @@
     -fx-border-color: transparency;
 }
 
+.table-view .table-row-cell:focused:selected .table-cell {
+    -fx-table-cell-border-color: transparent;
+    -fx-focus-color: transparent;
+}
+
 .table-row-cell:selected {
     -fx-background-color: -primary-color;
 }
@@ -246,20 +258,71 @@
     -fx-text-fill: -tertiary-color;
 }
 
-.table-view > .virtual-flow > .scroll-bar:vertical,
-.table-view > .virtual-flow > .scroll-bar:vertical > .track,
-.table-view > .virtual-flow > .scroll-bar:vertical > .track-background,
-.table-view > .virtual-flow > .scroll-bar:horizontal,
-.table-view > .virtual-flow > .scroll-bar:horizontal > .track,
-.table-view > .virtual-flow > .scroll-bar:horizontal > .track-background {
-    -fx-background-color: transparent;
+.table-view .arrow-button .arrow {
+    -fx-shape: "M 0 0 L 6 0 L 3 6 z";
+    -fx-fill: -white;
+    -fx-background-color: -white;
+    -fx-border-color: -white;
+}
+
+.table-view .table-row-cell:filled:selected {
+    -fx-background-color: -primary-color;
+    -fx-text-fill: white;
+}
+
+.table-view .scroll-bar:vertical {
+    -fx-padding: 3;
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: -white;
+}
+
+.table-view .increment-button, .table-view .decrement-button {
+    -fx-padding: 0;
+    -fx-fill: -white;
+}
+
+.table-view .scroll-bar:vertical .thumb,
+.table-view .scroll-bar:horizontal .thumb {
+    -fx-background-color: -tertiary-color;
+    -fx-background-radius: 43;
+    -fx-background-insets: 0;
+}
+
+.table-view .scroll-bar:vertical .increment-arrow {
+    -fx-shape: "M 0 0 L 6 0 L 3 6 z";
+    -fx-fill: -tertiary-color;
+    -fx-border-color: -tertiary-color;
+    -fx-background-color: -tertiary-color;
 }
 
 
+.table-view .scroll-bar:vertical .decrement-arrow {
+    -fx-shape: "M 0 6 L 6 6 L 3 0 z";
+    -fx-fill: -tertiary-color;
+    -fx-border-color: -tertiary-color;
+    -fx-background-color: -tertiary-color;
+}
 
-.table-view > .virtual-flow > .scroll-bar > .increment-button,
-.table-view > .virtual-flow > .scroll-bar > .decrement-button {
-    -fx-opacity: 0;
+.table-view .scroll-bar:horizontal {
+    -fx-padding: 3;
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: -white;
+}
+
+.table-view .scroll-bar:horizontal .increment-arrow {
+    -fx-shape: "M 0,0 L 10,5 L 0,10 Z";
+    -fx-fill: -tertiary-color;
+    -fx-border-color: -tertiary-color;
+    -fx-background-color: -tertiary-color;
+}
+
+.table-view .scroll-bar:horizontal .decrement-arrow {
+    -fx-shape: "M 10,0 L 0,5 L 10,10 Z";
+    -fx-fill: -tertiary-color;
+    -fx-border-color: -tertiary-color;
+    -fx-background-color: -tertiary-color;
 }
 
 .table-view .filler{
@@ -280,7 +343,10 @@
     -fx-text-fill: -tertiary-color;
     -fx-padding: 5;
     -fx-background-radius: 43;
+    -fx-font-family: 'Krona One';
+    -fx-font-size: 10;
     -fx-border-color: transparent;
+    -fx-editable: false;
 }
 
 .combo-box:hover {
@@ -289,8 +355,13 @@
 
 
 .combo-box .list-cell {
-    -fx-background-color: -white-smoke;
+    -fx-background-color: transparent;
     -fx-text-fill: -tertiary-color;
+}
+
+.combo-box .list-cell:hover {
+    -fx-background-color: transparent;
+    -fx-text-fill: -white;
 }
 
 
@@ -303,7 +374,7 @@
 .combo-box-popup .list-cell {
     -fx-background-color: -white-smoke;
     -fx-text-fill: -tertiary-color;
-    -fx-font-size: 11;
+    -fx-font-size: 10;
 }
 
 .combo-box-popup .list-cell:hover {
@@ -317,9 +388,10 @@
 }
 
 .combo-box .text-input {
-    -fx-background-color: -white-smoke;
+    -fx-editable : false;
+    -fx-background-color: transparent;
     -fx-text-fill: -tertiary-color;
-    -fx-font-size: 11;
+    -fx-font-size: 10;
     -fx-padding: 5;
 }
 
@@ -339,6 +411,13 @@
 
 .combo-box .arrow-button:pressed {
     -fx-background-color: -primary-color;
+}
+
+.combo-box .arrow-button .arrow {
+    -fx-shape: "M 0 0 L 6 0 L 3 6 z";
+    -fx-fill: -tertiary-color;
+    -fx-background-color: -tertiary-color;
+    -fx-border-color: -tertiary-color;
 }
 
 .neighbor-container {
