--- a/src/assets/FXML/admin_user.fxml
+++ b/src/assets/FXML/admin_user.fxml
@@ -141,7 +141,7 @@
                                     <TextField fx:id="textfield_phone_adduser" maxWidth="250.0" minHeight="36.0" prefHeight="60.0" prefWidth="110.0" promptText="Téléphone" styleClass="inputs-add-user" />
                                     <TextField fx:id="textField_role_adduser" maxWidth="250.0" minHeight="36.0" prefHeight="60.0" prefWidth="80.0" promptText="Rôle" styleClass="inputs-add-user" />
                                     <PasswordField fx:id="textfield_psswrd_adduser" maxWidth="202.0" minHeight="36.0" prefHeight="60.0" prefWidth="150.0" promptText="Mot de passe" styleClass="inputs-add-user" />
-                                    <Button mnemonicParsing="false" onAction="#addNewUserToDatabase" prefHeight="60.0" prefWidth="100.0" styleClass="add-button" text="Add">
+                                    <Button mnemonicParsing="false" onAction="#addNewUserToDatabase" prefHeight="60.0" prefWidth="100.0" styleClass="add-button" text="Ajouter">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin></Button>
