--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_dashboard.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_dashboard.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
    <children>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" layoutY="63.2" prefHeight="682.0" prefWidth="1116.0" styleClass="adminpage-base" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -128,7 +128,7 @@
                                        </padding>
                                     </ComboBox>
                                     <TextArea fx:id="textarea_communeA" editable="false" prefHeight="200.0" prefWidth="446.0" styleClass="show-text" visible="false" wrapText="true" />
-                                    <ComboBox fx:id="combobox_filtredonnees" onAction="#selectDonneeAComp" prefWidth="150.0" promptText="Filtres">
+                                    <ComboBox fx:id="combobox_filtredonnees" prefWidth="150.0" promptText="Filtres">
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
@@ -148,7 +148,8 @@
                                           <Insets left="10.0" />
                                        </padding>
                                     </ComboBox>
-                                    <TextArea fx:id="textarea_communeB" editable="false" prefHeight="200.0" prefWidth="446.0" styleClass="show-text" visible="false" wrapText="true"/>
+                                    <TextArea fx:id="textarea_communeB" editable="false" prefHeight="200.0" prefWidth="446.0" styleClass="show-text" visible="false" wrapText="true" />
+                                    <Button mnemonicParsing="false" onAction="#reloadChart" text="Actualiser" />
                                  </children>
                                  <VBox.margin>
                                     <Insets left="10.0" top="5.0" />
