--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -2,10 +2,10 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -160,7 +160,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
                                  </VBox.margin>
                                  <children>
-                                    <LineChart fx:id="linechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="404.0" prefWidth="490.0" visible="false">
+                                    <LineChart fx:id="linechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="404.0" prefWidth="490.0">
                                       <xAxis>
                                         <CategoryAxis side="BOTTOM" />
                                       </xAxis>
@@ -171,7 +171,17 @@
                                           <Insets top="5.0" />
                                        </HBox.margin>
                                     </LineChart>
-                                    <PieChart fx:id="piechart_stats" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="420.0" prefWidth="299.0" visible="false" />
+                                    <ImageView fitHeight="343.0" fitWidth="315.0" pickOnBounds="true" preserveRatio="true" styleClass="image-graphe">
+                                       <HBox.margin>
+                                          <Insets top="5.0" />
+                                       </HBox.margin>
+                                       <image>
+                                          <Image url="@../../../ws/graphe.png" />
+                                       </image>
+                                       <viewport>
+                                          <Rectangle2D height="1000.0" minX="1000.0" width="1000.0" />
+                                       </viewport>
+                                    </ImageView>
                                  </children>
                               </HBox>
                            </children>
