--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_dashboard.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_dashboard.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
    <children>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" layoutY="63.2" prefHeight="682.0" prefWidth="1116.0" styleClass="adminpage-base" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -128,7 +128,7 @@
                                        </padding>
                                     </ComboBox>
                                     <TextArea fx:id="textarea_communeA" editable="false" prefHeight="200.0" prefWidth="446.0" styleClass="show-text" visible="false" wrapText="true" />
-                                    <ComboBox fx:id="combobox_filtredonnees" onAction="#selectDonneeAComp" prefWidth="150.0" promptText="Filtres">
+                                    <ComboBox fx:id="combobox_filtredonnees" prefWidth="150.0" promptText="Filtres">
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
@@ -155,6 +155,7 @@
                                     <Insets left="10.0" top="5.0" />
                                  </VBox.margin>
                               </HBox>
+                              <ComboBox fx:id="combobox_graph" onAction="#handleCreateGraph" prefWidth="150.0" />
                               <HBox alignment="CENTER" prefHeight="394.0" prefWidth="794.0" spacing="5.0">
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
@@ -171,7 +172,7 @@
                                           <Insets top="5.0" />
                                        </HBox.margin>
                                     </LineChart>
-                                    <ImageView fitHeight="343.0" fitWidth="315.0" pickOnBounds="true" preserveRatio="true" styleClass="image-graphe">
+                                    <ImageView fx:id="graphmap" fitHeight="343.0" fitWidth="315.0" pickOnBounds="true" preserveRatio="true" styleClass="image-graphe">
                                        <HBox.margin>
                                           <Insets top="5.0" />
                                        </HBox.margin>
