BIG UPDATE DE LA MORT QUI TUE

--- a/src/assets/CSS/popup.css
+++ b/src/assets/CSS/popup.css
@@ -27,7 +27,7 @@
  */
 
  .anchorpane {
-    -fx-background-color: transparency;
+    -fx-background-color: transparent;
     -fx-background-radius: 43;
  }
 
