--- a/src/assets/FXML/admin_dashboard.fxml
+++ b/src/assets/FXML/admin_dashboard.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_dashboard.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="682.0" prefWidth="1116.0" styleClass="anchorpane" stylesheets="@../CSS/admin_dashboard.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminPageController">
    <children>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" layoutY="63.2" prefHeight="682.0" prefWidth="1116.0" styleClass="adminpage-base" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -141,7 +141,7 @@
                                     <Insets left="10.0" top="10.0" />
                                  </VBox.margin>
                               </HBox>
-                              <HBox prefHeight="98.0" prefWidth="804.0" spacing="10.0">
+                              <HBox prefHeight="116.0" prefWidth="804.0" spacing="10.0">
                                  <children>
                                     <ComboBox fx:id="combobox_communeB" onAction="#selectionCommuneB" prefWidth="150.0" promptText="Commune2">
                                        <padding>
@@ -158,7 +158,18 @@
                                     <Insets left="10.0" top="5.0" />
                                  </VBox.margin>
                               </HBox>
-                              <ComboBox fx:id="combobox_graph" onAction="#handleCreateGraph" prefWidth="150.0" />
+                              <HBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="814.0">
+                                 <children>
+                                    <ComboBox fx:id="combobox_graph" onAction="#handleCreateGraph" prefWidth="150.0">
+                                       <HBox.margin>
+                                          <Insets right="15.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </HBox>
                               <HBox alignment="CENTER" prefHeight="394.0" prefWidth="794.0" spacing="5.0">
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
